# cst-ifc-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.ko.md  README.md
crates/cst-core/: Cargo.toml
crates/cst-core/src/: error.rs  id.rs  lib.rs  tolerance.rs  traits.rs
crates/cst-geometry/: Cargo.toml
crates/cst-geometry/src/: lib.rs  tessellate.rs
crates/cst-geometry/src/curve/: bspline.rs  circle.rs  ellipse.rs  line.rs  mod.rs
crates/cst-geometry/src/nurbs/: deboor.rs  knot.rs  mod.rs
crates/cst-geometry/src/surface/: bspline.rs  conical.rs  cylindrical.rs  mod.rs  planar.rs  spherical.rs  toroidal.rs
crates/cst-ifc/: Cargo.toml  IFC_TO_MESH_SUMMARY.md
crates/cst-ifc/src/: ifc_entities.rs  ifc_geometry.rs  ifc_reader.rs  ifc_spatial.rs  ifc_to_mesh.rs  lib.rs  step_lexer.rs  step_parser.rs
crates/cst-ifc/tests/: test_ifc_to_mesh.rs
crates/cst-math/: Cargo.toml
crates/cst-math/src/: aabb.rs  lib.rs  plane.rs  ray.rs  transform.rs
crates/cst-mesh/: Cargo.toml
crates/cst-mesh/src/: adaptive.rs  face_tessellator.rs  lib.rs  topology_to_mesh.rs  triangulate.rs
crates/cst-render/: Cargo.toml
crates/cst-render/src/: camera.rs  lib.rs  pipeline.rs  scene.rs
crates/cst-topology/: Cargo.toml
crates/cst-topology/src/: lib.rs
crates/cst-topology/src/halfedge/: bounding.rs  iter.rs  mesh.rs  mod.rs  types.rs  validate.rs
crates/cst-topology/tests/: halfedge_tests.rs
examples/: cst_viewer.rs
