[package]
name = "cst-mesh"
description = "CSTEngine tessellation: B-Rep to triangle mesh conversion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cst-core = { workspace = true }
cst-math = { workspace = true }
cst-topology = { workspace = true }
cst-geometry = { workspace = true }
rayon = { workspace = true }
